SEBSERV-984 implementation